🔥 Remove CODEOWNERS, ISSUE_TEMPLATE, PULL_REQUEST_TEMPLATE, github-repo-stats, codeql-analysis, and defender-for-devops to streamline project management ✨ Add deploy.yaml and sync-fork.yaml workflows to enhance CI/CD processes
🚀 (Dockerfile.responsa): Add new Dockerfile for Presidio Analyzer setup
📝 (presidio_analyzer/conf): Update and add configuration files for NLP models
♻️ (presidio_analyzer/conf): Refactor context lists in default_recognizers.yaml for clarity

--- a/presidio-analyzer/presidio_analyzer/conf/default_recognizers.yaml
+++ b/presidio-analyzer/presidio_analyzer/conf/default_recognizers.yaml
@@ -15,11 +15,9 @@ recognizers:
   - name: CreditCardRecognizer
     supported_languages:
     - language: en
-      context: [credit, card, visa, mastercard, cc,
-      amex, discover, jcb, diners, maestro, instapayment]
+      context: [credit, card, visa, mastercard, cc, amex, discover, jcb, diners, maestro, instapayment]
     - language: es
-      context: [tarjeta, credito, visa, mastercard, cc,
-      amex, discover, jcb, diners, maestro, instapayment]
+      context: [tarjeta, credito, visa, mastercard, cc, amex, discover, jcb, diners, maestro, instapayment]
     - language: it
     - language: pl
     type: predefined
