chore: Update runs-on value in deploy.yaml workflow to "self-hosted"

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   prepare:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     outputs:
       name: ${{ steps.prepare.outputs.name }}
       version: ${{ steps.prepare.outputs.version }}
