🔧 (deploy.yaml): Remove unnecessary NPM secrets for simplification ✨ (Dockerfile.responsa, conf files): Customize Presidio analyzer configs for Responsa project 📝 (analyzer_config.yaml, nlp_config.yaml, recognizers_config.yaml): Add new configuration files for language support and recognizer settings in Presidio analyzer

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,6 +35,6 @@ jobs:
     secrets:
       RESPONSA_REGISTRY_USERNAME: ${{ secrets.RESPONSA_REGISTRY_USERNAME }}
       RESPONSA_REGISTRY_PASSWORD: ${{ secrets.RESPONSA_REGISTRY_PASSWORD }}
-      RESPONSA_NPM_HOSTNAME: ${{ secrets.RESPONSA_NPM_HOSTNAME }}
-      RESPONSA_NPM_TOKEN: ${{ secrets.RESPONSA_NPM_TOKEN }}
-      RESPONSA_NPM_SCOPE: ${{ secrets.RESPONSA_NPM_SCOPE }}
+      RESPONSA_NPM_HOSTNAME: 'no-need'
+      RESPONSA_NPM_TOKEN: 'no-need'
+      RESPONSA_NPM_SCOPE: 'no-need'
