chore: Update deploy.yaml workflow to include all files in presidio-analyzer directory

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,7 +4,7 @@ on:
   push: # on push to main
     branches:
       - main
-    paths: presidio-analyzer
+    paths: presidio-analyzer/**
   workflow_dispatch: # on button click
 
 jobs:
