--- a/presidio-analyzer/presidio_analyzer/conf/responsa/nlp_config.yaml
+++ b/presidio-analyzer/presidio_analyzer/conf/responsa/nlp_config.yaml
@@ -1,11 +1,11 @@
-nlp_engine_name: spacy
+nlp_engine_name: stanza
 models:
   -
     lang_code: en
-    model_name: en_core_web_lg
+    model_name: en
   -
     lang_code: it
-    model_name: it_core_news_lg
+    model_name: it
 
 ner_model_configuration:
   model_to_presidio_entity_mapping:
@@ -14,25 +14,9 @@ ner_model_configuration:
     NORP: NRP
     FAC: LOCATION
     LOC: LOCATION
-    GPE: LOCATION
     LOCATION: LOCATION
+    GPE: LOCATION
     ORG: ORGANIZATION
     ORGANIZATION: ORGANIZATION
     DATE: DATE_TIME
     TIME: DATE_TIME
-
-  low_confidence_score_multiplier: 0.4
-  low_score_entity_names:
-  -
-  labels_to_ignore:
-  - ORGANIZATION # Has many false positives
-  - CARDINAL
-  - EVENT
-  - LANGUAGE
-  - LAW
-  - MONEY
-  - ORDINAL
-  - PERCENT
-  - PRODUCT
-  - QUANTITY
-  - WORK_OF_ART
