--- a/.github/workflows/sync-fork.yaml
+++ b/.github/workflows/sync-fork.yaml
@@ -2,7 +2,7 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: '* 0 * * *' # every day at midnight
+    - cron: '* 0 1 * *'
   workflow_dispatch: # on button click
 
 jobs:
