chore: Update Pipfile to include stanza as a dependency

--- a/presidio-analyzer/Pipfile
+++ b/presidio-analyzer/Pipfile
@@ -14,7 +14,7 @@ typing-extensions = "*"
 spacy-huggingface-pipelines = "*"
 azure-ai-textanalytics = "*"
 azure-core = "*"
-# stanza = "*"
+stanza = "*"
 # spacy-stanza = "*"
 
 [dev-packages]
